--- a/css/main.scss
+++ b/css/main.scss
@@ -109,11 +109,11 @@ ul li input {
 
 a .image {
   transition: .2s ease all;
-  opacity: 1;
+  opacity: .8;
 }
 
 a:hover .image {
-  opacity: 0.7;
+  opacity: 0.5;
 }
 
 .ingredients p {
