--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -10,7 +10,7 @@ layout: default
     {% if page.imagecredit %}
     {% for imagecredit in page.imagecredit %}
     <span class="image-credits">
-      <a class="" href="{{ imagecredit }}">
+      <a target="_blank" class="" href="{{ imagecredit }}">
         <svg class="js-geomicon geomicon" width="14" height="14" data-icon="camera" viewBox="0 0 32 32"
           style="fill:currentcolor">
           <title>Source</title>
