--- a/css/_search.scss
+++ b/css/_search.scss
@@ -1,7 +1,7 @@
 .search input {
   border-radius: 5px;
   border: 2px solid #eee;
-  box-shadow: 0 0 14px rgba(#007FFF, 0.1);
+  box-shadow: 0 0 14px rgba(#D65108, 0.1);
   width: 100%;
   padding: 1.5rem
 }
