--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,5 @@
 ---
-# Only the main Sass file needs front matter (the dashes are enough)
+# this frontmatter is required by jekyll
 ---
 
 @import "./layout-customization";
