Remove the evil jquery and refactor stuff

--- a/css/bass.css
+++ b/css/bass.css
@@ -1,5 +1,5 @@
 
-@import url('https://rsms.me/inter/inter-ui.css');
+@import url('https://rsms.me/inter/inter.css');
 
 body, button { margin: 0 }
 
@@ -122,13 +122,13 @@ td { vertical-align: top }
 
 
 body {
-  font-family: 'Inter UI', Helvetica, sans-serif;
+  font-family: 'Inter', Helvetica, sans-serif;
   line-height: 1.5;
   font-size: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Inter UI', Helvetica, sans-serif;
+  font-family: 'Inter', Helvetica, sans-serif;
   font-weight: bold;
   line-height: 1.1;
   margin-top: 1em;
