--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -31,9 +31,7 @@ layout: default
       <h1 class="post-title center m1 sm-mt3" itemprop="name">{{ page.title }}</h1>
       {% for tag in page.tags %}
       <a href='{{ site.baseurl }}/search.html?q={{ tag | replace: ",", ""  }}'> {{ tag | replace: ",", "" }}</a>
-      {% if forloop.last == false %}
-      |
-      {% endif %}
+      {% if forloop.last == false %}|{% endif %}
       {% endfor %}
     </header>
 
@@ -79,11 +77,10 @@ layout: default
     </div>
     <!-- end recipe and directions -->
 
-
-
     {% for category in page.categories %}
-    <p class="clearfix">{{ site.translation[site.language].category }}: <span
-        itemprop="recipeCategory">{{ category }}</span></p>
+    <p class="clearfix">{{ site.translation[site.language].category }}:
+      <span itemprop="recipeCategory">{{ category }}</span>
+    </p>
     {% endfor %}
 
   </article>
@@ -91,28 +88,21 @@ layout: default
 </div>
 
 <script type="text/javascript">
+  function enhanceMenuPoint(point) {
+    point.innerHTML += '<input class="recipe-point" type="checkbox" />';
+    const input = point.querySelector("input");
 
-  $(document).ready(function () {
-
-    jQuery.fn.clickToggle = function (a, b) {
-      var ab = [b, a];
-      function cb() { ab[this._tog ^= 1].call(this); }
-      return this.on("click", cb);
-    };
-
-    $("ul li").append('<input type="checkbox">');
-    $("ul li").clickToggle(function () {
-      $(this).children("input").prop('checked', true);
-      var height = $(this).height();
-      var y = $(window).scrollTop();
-      $('html, body').animate({ scrollTop: y + height + 16 }, 200);
-    }, function () {
-      $(this).children("input").prop('checked', false);
-      var height = $(this).height();
-      var y = $(window).scrollTop();
-      $('html, body').animate({ scrollTop: y - height - 16 }, 200);
+    point.addEventListener("click", e => {
+      input.checked = !input.checked;
+      window.scrollBy({
+        top: input.checked ? 50 : -50,
+        behavior: 'smooth'
+      })
     });
+  }
 
+  document.addEventListener("DOMContentLoaded", function () {
+    const menuPoints = document.querySelectorAll("ul li");
+    menuPoints.forEach(enhanceMenuPoint);
   });
-
 </script>
